content/styles/main.less
@import "reset";

@accent: rgb(190,22,34);

body {
  margin: 0 auto;
  padding: 20px;
  max-width: 800px - 2*20px;
  min-width: 400px;
  font: 11pt/1.7 'Open Sans', Verdana, Arial, sans-serif;
}

a {
  color: @accent;
  &:hover {
    color: lighten(saturate(@accent, 50%), 3%);
  }
}

p {
  + p {
    margin-top: 1em;
  }
}

h1 {
  font-size: 2.5em;
}

h1:before {
  content: "Linked Data Fragments";
  font-weight: 300;
  letter-spacing: -2px;
  color: fade(black, 30%);
  border-right: 1px solid;
  padding-right: 14px;
  margin: 0 10px 0 -2px;
}

h2 {
  font-size: 1.5em;
  margin: 1.5em 0 .2em -1px;
  color: @accent;

  h1 + & {
    margin-top: .5em;
  }
}

main ul {
  list-style: none;

  li {
    padding-left: 17px;
    &:before {
      content: "■ ";
      color: @accent;
      position: absolute;
      font-size: .9em;
      margin: -1px -16px;
    }
  }
}

nav {
  background-color: fade(black, 4%);
  border-radius: 10px;
  margin: 10px 0 30px;

  * {
    display: inline-block;
  }
  a {
    text-decoration: none;
  }
  p {
    font-weight: bold;
    border-radius: 10px 3px 3px 10px;
    padding: 5px 15px 5px 10px;
    background-color: @accent;
    a {
      color: white !important;
    }
  }
  ul {
    padding-left: 20px;
    li {
      padding: 5px 18px;
      border-radius: 5px;
      &.active {
        font-weight: bold;
      }
      &:hover {
        background-color: @accent;
        a {
          color: white;
        }
        transition: all 0.2s;
      }
    }
  }

  &:after {
    content: " ";
    padding: 5px 5px 5px 0;
    background-color: @accent;
    border-right: 2px solid @accent;
    border-radius: 3px 10px 10px 3px;
    float: right;
  }
}

footer {
  margin-top: 3em;
  text-align: center;
  font-size: small;
  color: lighten(black, 40%);

  a {
    text-decoration: none;
  }
}

svg {
  font-size: .95em;
  .caption {
    font-style: italic;
    fill: #777;
  }
  a {
    fill: @accent;
  }
  .right {
    text-anchor: end;
  }
  .label {
    text-anchor: middle;
    font-weight: bold;
  }
  line {
    stroke: black;
  }
}

body.home {
  main {
    font-size: 1.2em;

    p {
      margin: 4em 0;
    }
  }

  img.aside {
    float: right;
    height: 7.2em;
  }
}

#billboard {
  text-align: center;
  margin-bottom: 4em;

  h1 {
    display: none;
  }

  .slogan {
    line-height: 1.4;
    color: @accent;
    font-size: 2em;
    font-weight: bold;
    margin: 0 0 3em;

    img {
      display: block;
      margin: 0 auto -1.4ex;
      width: 680px;
    }

    a {
      text-decoration: none;
    }
  }

  em {
    white-space: nowrap;
  }
}

@media (max-width: 800px) {
  // Display menu on two lines
  nav {
    p {
      display: block;
      border-radius: 10px 0 0 0;
    }
    &:after {
      display: none;
    }
  }

  // ensure labels don't overlap
  svg {
    .label:nth-child(odd) {
      baseline-shift: -1em;
    }
  }

  #billboard {
    .slogan {
      font-size: 2em;
      img {
        width: 100%;
        margin-bottom: -0.5em;
      }
    }
  }

  body.home {
    text-align: center;

    img.aside {
      float: none;
      display: block;
      margin: 0 auto .5em;
      height: 8em;
    }
  }
}

@media (max-width: 620px) {
  body {
    padding: 5px 10px;
    font-size: 10pt;
  }

  // Make headers shorter
  h1 {
    display: none;
  }

  nav {
    margin: 0 0 10px;
    ul {
      padding: 0px;
      li {
        padding: 5px 10px;
      }
    }
  }
}

@media (max-height: 700px) {
  body {
    line-height: 1.4;
  }

  #billboard {
    .slogan {
      font-size: 1em;
      img {
        width: 50%;
        margin-bottom: -0.5em;
      }
    }
  }
}

